Se corrige la documentacion sobre el orden de importacion y la variable

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "EDanimate",
-  "version": "1.0.0",
+  "name": "ed-animate",
+  "version": "1.0.1",
   "description": "Simple library for CSS Animations. Inspired in animate.css",
   "main": "gulpfile.babel.js",
   "scripts": {
